fixed an alignment issue in mozilla

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,10 @@ width: 90px;
 
 }
 
+.thumbnail {
+  max-height: 64px;
+}
+
 
 .tabmenu-right {
 position:relative;
